example html の signaling URL をそろえる

--- a/example/multistream_safari.html
+++ b/example/multistream_safari.html
@@ -27,7 +27,7 @@
         <script type="text/javascript">
 var channelId = 'Sora';
 var debug = false;
-var sora = Sora.connection('wss://localhost/signaling', debug);
+var sora = Sora.connection('ws://localhost:5000/signaling', debug);
 var metadata1 = 'ham';
 var metadata2 = 'spam';
 var options = {
