--- a/example/updown_safari.html
+++ b/example/updown_safari.html
@@ -29,7 +29,7 @@
         <script type="text/javascript">
 var channelId = 'Sora';
 var debug = true;
-var sora = Sora.connection('wss://localhost/signaling', debug);
+var sora = Sora.connection('ws://localhost:5000/signaling', debug);
 var metadata1 = 'ham';
 var metadata2 = 'spam';
 var publisher = sora.publisher(channelId, metadata1, {videoCodecType: 'H264'});
