--- a/example/index.html
+++ b/example/index.html
@@ -7,10 +7,10 @@
         <div class="container">
           <ul>
             <li><a href="updown.html">配信/視聴サンプル</a></li>
-            <li><a href="updown_safari.html">配信/視聴(Safari用)サンプル</a></li>
             <li><a href="multistream.html">マルチストリーム配信サンプル</a></li>
             <li><a href="multistream_down.html">マルチストリーム視聴サンプル</a></li>
-            <li><a href="multistream_safari.html">マルチストリーム配信(Safari用)サンプル</a></li>
+            <li><a href="spotlight.html">スポットライト配信サンプル</a></li>
+            <li><a href="spotlight_down.html">スポットライト視聴サンプル</a></li>
           </ul>
         </div>
     </body>
