--- a/example/multistream.html
+++ b/example/multistream.html
@@ -25,16 +25,14 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-var channelId = 'Sora';
-var debug = false;
-var sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
-var metadata1 = 'ham';
-var metadata2 = 'spam';
-var options = {
+const channelId = 'Sora';
+const debug = false;
+const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
+const options = {
   multistream: true
 }
-var publisher1 = sora.publisher(channelId, metadata1, options);
-var publisher2 = sora.publisher(channelId, metadata2, options);
+const publisher1 = sora.publisher(channelId, null, options);
+const publisher2 = sora.publisher(channelId, null, options);
 
 document.querySelector('#start-publisher1').addEventListener('click', function() {
   // publisher1
@@ -49,8 +47,8 @@ document.querySelector('#start-publisher1').addEventListener('click', function()
       console.error(e);
     });
   publisher1.on('addstream', function(event) {
-    var remoteVideos = document.querySelector('#publisher1-remote-videos');
-    var remoteVideo = document.createElement('video');
+    const remoteVideos = document.querySelector('#publisher1-remote-videos');
+    const remoteVideo = document.createElement('video');
     remoteVideo.id = 'publisher1-remotevideo-' + event.stream.id;
     remoteVideo.style.border = '1px solid red';
     remoteVideo.autoplay = true;
@@ -60,7 +58,7 @@ document.querySelector('#start-publisher1').addEventListener('click', function()
     remoteVideos.appendChild(remoteVideo);
   });
   publisher1.on('removestream', function(event) {
-    var remoteVideo = document.querySelector('#publisher1-remotevideo-' + event.stream.id);
+    const remoteVideo = document.querySelector('#publisher1-remotevideo-' + event.stream.id);
     document.querySelector('#publisher1-remote-videos').removeChild(remoteVideo);
   });
 });
@@ -77,8 +75,8 @@ document.querySelector('#start-publisher2').addEventListener('click', function()
       console.error(e);
     });
   publisher2.on('addstream', function(event) {
-    var remoteVideos = document.querySelector('#publisher2-remote-videos');
-    var remoteVideo = document.createElement('video');
+    const remoteVideos = document.querySelector('#publisher2-remote-videos');
+    const remoteVideo = document.createElement('video');
     remoteVideo.id = 'publisher2-remotevideo-' + event.stream.id;
     remoteVideo.style.border = '1px solid red';
     remoteVideo.autoplay = true;
@@ -88,7 +86,7 @@ document.querySelector('#start-publisher2').addEventListener('click', function()
     remoteVideos.appendChild(remoteVideo);
   });
   publisher2.on('removestream', function(event) {
-    var remoteVideo = document.querySelector('#publisher2-remotevideo-' + event.stream.id);
+    const remoteVideo = document.querySelector('#publisher2-remotevideo-' + event.stream.id);
     document.querySelector('#publisher2-remote-videos').removeChild(remoteVideo);
   });
 });
