--- a/example/spotlight.html
+++ b/example/spotlight.html
@@ -1,11 +1,11 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>multistream safari test</title>
+        <title>spotlight test</title>
     </head>
     <body>
         <div class="container">
-            <h1>multistream safari test</h1>
+            <h1>spotlight test</h1>
             <br />
             <div style="float:left;">
                 <h2>up1</h2>
@@ -25,17 +25,15 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-var channelId = 'Sora';
-var debug = false;
-var sora = Sora.connection('ws://localhost:5000/signaling', debug);
-var metadata1 = 'ham';
-var metadata2 = 'spam';
-var options = {
-  videoCodecType: 'H264',
-  multistream: true
+const channelId = 'Sora';
+const debug = false;
+const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
+const options = {
+  multistream: true,
+  spotlight: 2
 }
-var publisher1 = sora.publisher(channelId, metadata1, options);
-var publisher2 = sora.publisher(channelId, metadata2, options);
+const publisher1 = sora.publisher(channelId, null, options);
+const publisher2 = sora.publisher(channelId, null, options);
 
 document.querySelector('#start-publisher1').addEventListener('click', function() {
   // publisher1
@@ -50,8 +48,8 @@ document.querySelector('#start-publisher1').addEventListener('click', function()
       console.error(e);
     });
   publisher1.on('addstream', function(event) {
-    var remoteVideos = document.querySelector('#publisher1-remote-videos');
-    var remoteVideo = document.createElement('video');
+    const remoteVideos = document.querySelector('#publisher1-remote-videos');
+    const remoteVideo = document.createElement('video');
     remoteVideo.id = 'publisher1-remotevideo-' + event.stream.id;
     remoteVideo.style.border = '1px solid red';
     remoteVideo.autoplay = true;
@@ -61,7 +59,7 @@ document.querySelector('#start-publisher1').addEventListener('click', function()
     remoteVideos.appendChild(remoteVideo);
   });
   publisher1.on('removestream', function(event) {
-    var remoteVideo = document.querySelector('#publisher1-remotevideo-' + event.stream.id);
+    const remoteVideo = document.querySelector('#publisher1-remotevideo-' + event.stream.id);
     document.querySelector('#publisher1-remote-videos').removeChild(remoteVideo);
   });
 });
@@ -78,8 +76,8 @@ document.querySelector('#start-publisher2').addEventListener('click', function()
       console.error(e);
     });
   publisher2.on('addstream', function(event) {
-    var remoteVideos = document.querySelector('#publisher2-remote-videos');
-    var remoteVideo = document.createElement('video');
+    const remoteVideos = document.querySelector('#publisher2-remote-videos');
+    const remoteVideo = document.createElement('video');
     remoteVideo.id = 'publisher2-remotevideo-' + event.stream.id;
     remoteVideo.style.border = '1px solid red';
     remoteVideo.autoplay = true;
@@ -89,7 +87,7 @@ document.querySelector('#start-publisher2').addEventListener('click', function()
     remoteVideos.appendChild(remoteVideo);
   });
   publisher2.on('removestream', function(event) {
-    var remoteVideo = document.querySelector('#publisher2-remotevideo-' + event.stream.id);
+    const remoteVideo = document.querySelector('#publisher2-remotevideo-' + event.stream.id);
     document.querySelector('#publisher2-remote-videos').removeChild(remoteVideo);
   });
 });
