サイマルキャストサンプルのリンクを追加する

--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
             <li><a href="multistream_down.html">マルチストリーム視聴サンプル</a></li>
             <li><a href="spotlight.html">スポットライト配信サンプル</a></li>
             <li><a href="spotlight_down.html">スポットライト視聴サンプル</a></li>
+            <li><a href="simulcast.html">サイマルキャストサンプル</a></li>
           </ul>
         </div>
     </body>
