--- a/example/spotlight_recvonly.html
+++ b/example/spotlight_recvonly.html
@@ -6,8 +6,8 @@
     <body>
         <div class="container">
             <h1>spotlight downstream test</h1>
-            <button id="start-subscriber">start</button>
-            <button id="stop-subscriber">stop</button><br />
+            <button id="start-recvonly">start</button>
+            <button id="stop-recvonly">stop</button><br />
             <div style="float:left;">
                 <div id="remote-videos"></div>
             </div>
@@ -22,15 +22,15 @@ const options = {
   multistream: true,
   spotlight: 2
 }
-const subscriber = sora.subscriber(channelId, null, options);
+const recvonly = sora.recvonly(channelId, null, options);
 
-document.querySelector('#start-subscriber').addEventListener('click', function() {
-  subscriber.connect()
+document.querySelector('#start-recvonly').addEventListener('click', function() {
+  recvonly.connect()
     .catch(e => {
       console.error(e);
     });
 
-  subscriber.on('addstream', function(event) {
+  recvonly.on('addstream', function(event) {
     const remoteVideos = document.querySelector('#remote-videos');
     const remoteVideo = document.createElement('video');
     remoteVideo.id = 'publisher-remotevideo-' + event.stream.id;
@@ -42,7 +42,7 @@ document.querySelector('#start-subscriber').addEventListener('click', function()
     remoteVideos.appendChild(remoteVideo);
   });
 
-  subscriber.on('removestream', function(event) {
+  recvonly.on('removestream', function(event) {
     const remoteVideo = document.querySelector('#publisher-remotevideo-' + event.stream.id);
     document.querySelector('#remote-videos').removeChild(remoteVideo);
   });
