サンプルファイル名の変更

--- a/example/multistream_recvonly.html
+++ b/example/multistream_recvonly.html
@@ -1,11 +1,11 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>multistream downstream test</title>
+        <title>Multistream Recvonly test</title>
     </head>
     <body>
         <div class="container">
-            <h1>multistream downstream test</h1>
+            <h1>Multistream Recvonly test</h1>
             <button id="start-recvonly">start</button>
             <button id="stop-recvonly">stop</button><br />
             <div style="float:left;">
