--- a/example/multistream_sendrecv.html
+++ b/example/multistream_sendrecv.html
@@ -1,11 +1,11 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>multistream test</title>
+        <title>Multistream Sendrecv test</title>
     </head>
     <body>
         <div class="container">
-            <h1>multistream test</h1>
+            <h1>Multistream Sendrecv test</h1>
             <br />
             <div style="float:left;">
                 <h2>up1</h2>
