--- a/example/sendonly_recvonly.html
+++ b/example/sendonly_recvonly.html
@@ -1,25 +1,25 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>updown test</title>
+        <title>Sendonly / Recvonly test</title>
     </head>
     <body>
         <div class="container">
-            <h1>updown test</h1>
+            <h1>Sendonly / Recvonly test</h1>
             <button id="start">start</button>
             <br />
             <div style="float:left;">
-                <h2>up</h2>
+                <h2>sendonly</h2>
                 <p id="local-video-client-id"></p>
                 <video id="local-video" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
             </div>
             <div style="float:left;">
-                <h2>down1</h2>
+                <h2>recvonly1</h2>
                 <p id="remote-video-client-id-1"></p>
                 <video id="remote-video1" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
             </div>
             <div style="float:left;">
-                <h2>down2</h2>
+                <h2>recvonly2</h2>
                 <p id="remote-video-client-id-2"></p>
                 <video id="remote-video2" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
             </div>
