--- a/example/simulcast.html
+++ b/example/simulcast.html
@@ -1,27 +1,27 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>simulcast test</title>
+        <title>Simulcast test</title>
     </head>
     <body>
         <div class="container">
-            <h1>simulcast test</h1>
+            <h1>Simulcast test</h1>
             <button id="start">start</button>
             <br />
             <div>
-                <h2>upstream<span id="local-video-client-id"></span></h2>
+                <h2>sendonly<span id="local-video-client-id"></span></h2>
                 <video id="local-video" autoplay="" style="width: 320px; height: 180px; border: 1px solid blue;"></video>
             </div>
             <div>
-                <h2>downstream low<span id="remote-video-client-id-low"></span></h2>
+                <h2>recvonly low<span id="remote-video-client-id-low"></span></h2>
                 <video id="remote-video-low" autoplay="" style="border: 1px solid red;"></video>
             </div>
             <div>
-                <h2>downstream middle<span id="remote-video-client-id-middle"></span></h2>
+                <h2>recvonly middle<span id="remote-video-client-id-middle"></span></h2>
                 <video id="remote-video-middle" autoplay="" style="border: 1px solid red;"></video>
             </div>
             <div>
-                <h2>downstream high<span id="remote-video-client-id-high"></span></h2>
+                <h2>recvonly high<span id="remote-video-client-id-high"></span></h2>
                 <video id="remote-video-high" autoplay="" style="border: 1px solid red;"></video>
             </div>
         </div>
