--- a/example/spotlight_sendrecv.html
+++ b/example/spotlight_sendrecv.html
@@ -1,21 +1,21 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>spotlight test</title>
+        <title>Spotlight Sendrecv test</title>
     </head>
     <body>
         <div class="container">
-            <h1>spotlight test</h1>
+            <h1>Spotlight Sendrecv test</h1>
             <br />
             <div style="float:left;">
-                <h2>up1</h2>
+                <h2>sendrecv1</h2>
                 <button id="start-publisher1">start</button>
                 <button id="stop-publisher1">stop</button><br />
                 <video id="publisher1-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                 <div id="publisher1-remote-videos"></div>
             </div>
             <div id="publisher2" style="float:left;">
-                <h2>up2</h2>
+                <h2>sendrecv2</h2>
                 <button id="start-publisher2">start</button>
                 <button id="stop-publisher2">stop</button><br />
                 <video id="publisher2-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
