--- a/example/multistream_sendonly.html
+++ b/example/multistream_sendonly.html
@@ -1,17 +1,17 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>multistream test</title>
+        <title>Multistream Sendonly test</title>
     </head>
     <body>
         <div class="container">
-            <h1>multistream test</h1>
+            <h1>Multistream Rendonly test</h1>
             <br />
             <div style="float:left;">
                 <h2>up1</h2>
-                <button id="start-sendrecv">start</button>
-                <button id="stop-sendrecv">stop</button><br />
-                <video id="sendrecv-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                <button id="start-sendonly">start</button>
+                <button id="stop-sendonly">stop</button><br />
+                <video id="sendonly-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
             </div>
         </div>
 
