--- a/example/spotlight_recvonly.html
+++ b/example/spotlight_recvonly.html
@@ -1,11 +1,11 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>spotlight downstream test</title>
+        <title>Spotlight Recvonly test</title>
     </head>
     <body>
         <div class="container">
-            <h1>spotlight downstream test</h1>
+            <h1>Spotlight Recvonly test</h1>
             <button id="start-recvonly">start</button>
             <button id="stop-recvonly">stop</button><br />
             <div style="float:left;">
