up を sendonly や sendrecv に変更する

--- a/example/multistream_sendonly.html
+++ b/example/multistream_sendonly.html
@@ -8,7 +8,7 @@
             <h1>Multistream Rendonly test</h1>
             <br />
             <div style="float:left;">
-                <h2>up1</h2>
+                <h2>sendonly1</h2>
                 <button id="start-sendonly">start</button>
                 <button id="stop-sendonly">stop</button><br />
                 <video id="sendonly-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
