--- a/example/multistream_sendrecv.html
+++ b/example/multistream_sendrecv.html
@@ -8,14 +8,14 @@
             <h1>Multistream Sendrecv test</h1>
             <br />
             <div style="float:left;">
-                <h2>up1</h2>
+                <h2>sendrecv1</h2>
                 <button id="start-sendrecv1">start</button>
                 <button id="stop-sendrecv1">stop</button><br />
                 <video id="sendrecv1-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                 <div id="sendrecv1-remote-videos"></div>
             </div>
             <div id="sendrecv2" style="float:left;">
-                <h2>up2</h2>
+                <h2>sendrecv2</h2>
                 <button id="start-sendrecv2">start</button>
                 <button id="stop-sendrecv2">stop</button><br />
                 <video id="sendrecv2-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
