typo を修正する

--- a/example/multistream_sendonly.html
+++ b/example/multistream_sendonly.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Multistream Rendonly test</h1>
+            <h1>Multistream Sendonly test</h1>
             <br />
             <div style="float:left;">
                 <h2>sendonly1</h2>
