--- a/example/multistream_recvonly.html
+++ b/example/multistream_recvonly.html
@@ -29,21 +29,28 @@ document.querySelector('#start-recvonly').addEventListener('click', function() {
       console.error(e);
     });
 
-  recvonly.on('addstream', function(event) {
+  recvonly.on('track', function(event) {
+    const stream = event.streams[0];
+    if (!stream) return;
+    const remoteVideoId = 'remotevideo-' + stream.id;
     const remoteVideos = document.querySelector('#remote-videos');
-    const remoteVideo = document.createElement('video');
-    remoteVideo.id = 'remotevideo-' + event.stream.id;
-    remoteVideo.style.border = '1px solid red';
-    remoteVideo.autoplay = true;
-    remoteVideo.width = '320';
-    remoteVideo.height = '240';
-    remoteVideo.srcObject = event.stream;
-    remoteVideos.appendChild(remoteVideo);
+    if (!remoteVideos.querySelector('#' + remoteVideoId)) {
+      const remoteVideo = document.createElement('video');
+      remoteVideo.id = remoteVideoId;
+      remoteVideo.style.border = '1px solid red';
+      remoteVideo.autoplay = true;
+      remoteVideo.width = '320';
+      remoteVideo.height = '240';
+      remoteVideo.srcObject = stream;
+      remoteVideos.appendChild(remoteVideo);
+    }
   });
 
-  recvonly.on('removestream', function(event) {
-    const remoteVideo = document.querySelector('#remotevideo-' + event.stream.id);
-    document.querySelector('#remote-videos').removeChild(remoteVideo);
+  recvonly.on('removetrack', function(event) {
+    const remoteVideo = document.querySelector('#remotevideo-' + event.target.id);
+    if (remoteVideo) {
+      document.querySelector('#remote-videos').removeChild(remoteVideo);
+    }
   });
 });
     </script>
