example を修正する

--- a/example/multistream_sendonly.html
+++ b/example/multistream_sendonly.html
@@ -6,8 +6,7 @@
     <body>
         <div class="container">
             <h1>Multistream Sendonly test</h1>
-            <br />
-            <div style="float:left;">
+            <div>
                 <h2>sendonly1</h2>
                 <button id="start-sendonly">start</button>
                 <button id="stop-sendonly">stop</button><br />
