--- a/example/multistream_sendrecv_e2ee.html
+++ b/example/multistream_sendrecv_e2ee.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <h1>Multistream E2EE Sendrecv test</h1>
-            <div style="display: flex; justify-content: space-between;">
+            <div style="display: flex;">
                 <div>
                     <h2>sendrecv1</h2>
                     <p>secretKey: MasterKey</p>
@@ -15,7 +15,7 @@
                     <video id="sendrecv1-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                     <div id="sendrecv1-remote-videos"></div>
                 </div>
-                <div id="sendrecv2">
+                <div>
                     <h2>sendrecv2</h2>
                     <p>secretKey: MasterKey</p>
                     <button id="start-sendrecv2">start</button>
@@ -23,7 +23,7 @@
                     <video id="sendrecv2-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                     <div id="sendrecv2-remote-videos"></div>
                 </div>
-                <div id="sendrecv3">
+                <div>
                     <h2>sendrecv3</h2>
                     <p>secretKey: AnotherKey</p>
                     <button id="start-sendrecv3">start</button>
