--- a/example/sendonly_recvonly.html
+++ b/example/sendonly_recvonly.html
@@ -7,21 +7,22 @@
         <div class="container">
             <h1>Sendonly / Recvonly test</h1>
             <button id="start">start</button>
-            <br />
-            <div style="float:left;">
-                <h2>sendonly</h2>
-                <p id="local-video-client-id"></p>
-                <video id="local-video" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
-            </div>
-            <div style="float:left;">
-                <h2>recvonly1</h2>
-                <p id="remote-video-client-id-1"></p>
-                <video id="remote-video1" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
-            </div>
-            <div style="float:left;">
-                <h2>recvonly2</h2>
-                <p id="remote-video-client-id-2"></p>
-                <video id="remote-video2" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+            <div style="display: flex;">
+                <div>
+                    <h2>sendonly</h2>
+                    <p id="local-video-client-id"></p>
+                    <video id="local-video" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                </div>
+                <div>
+                    <h2>recvonly1</h2>
+                    <p id="remote-video-client-id-1"></p>
+                    <video id="remote-video1" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                </div>
+                <div>
+                    <h2>recvonly2</h2>
+                    <p id="remote-video-client-id-2"></p>
+                    <video id="remote-video2" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                </div>
             </div>
         </div>
 
