--- a/example/spotlight_recvonly.html
+++ b/example/spotlight_recvonly.html
@@ -8,7 +8,7 @@
             <h1>Spotlight Recvonly test</h1>
             <button id="start-recvonly">start</button>
             <button id="stop-recvonly">stop</button><br />
-            <div style="float:left;">
+            <div style="display: flex;">
                 <div id="remote-videos"></div>
             </div>
         </div>
